--- a/config.properties
+++ b/config.properties
@@ -1,23 +1,38 @@
+#tag to be added to the top level folder for organizational purposes
 tag=defaults
 
+#mech boolean filters, enabled only if value is 1
 jumpCapable=0
 ecmCapable=0
 
+#add ecm weight to mech's capable of mounting one?
 useECM=0
+#use counted shots rather than measured shots?
 useExactDPE=1
+#number of ghost heat groups to allow, with "1" being no ghost heat
 hslGroups=2
+#consider the time it takes to cool off between engagements?
 considerEngageInterval=1
+#importance attributed to the engagement interval, with "1" matching the importance of damage per engagement
 engageIntervalWeightCoeff=.5
-minTonnage=30
+#inclusive minimum mech tonnage to evaluate
+minTonnage=20
+#inclusive maximum mech tonnage to evaluate
 maxTonnage=100
-armorTrim=.16
+#proportion of armor (excluding head armor) to trim
+armorTrim=.15
+#duration in seconds that a weapon consuming ammo can fire
 ammoLifeSpan=80
+#the intended range for engagements to take place
 targetRange=600
-minSpeed=73
-targetEngageDuration=1.3
+#inclusive minimum speed a mech must be capable of, with average MASC and skills
+minSpeed=75
+#the duration for which damage output is to be optimized
+targetEngageDuration=1.5
+#number of loadouts to generate for each configuration of chassis,variant,engine type,armor type
 numLoadouts=1
 
-#custom dps
+#dps skill preset, remove pound signs to use
 #capacitySkill=.09
 #dissipationSkill=.1
 #jamDurationSkill=0
@@ -30,7 +45,7 @@ numLoadouts=1
 #weaponHeatSkillIS=0.105
 #speedSkill=.075
 
-#custom burst
+#burst preset, remove pound signs to use
 #capacitySkill=.12
 #dissipationSkill=.1
 #jamDurationSkill=0
@@ -43,7 +58,7 @@ numLoadouts=1
 #weaponHeatSkillIS=0.105
 #speedSkill=.075
 
-#defaults
+#default preset, remove pound signs to use
 capacitySkill=.15
 dissipationSkill=.1
 jamDurationSkill=.15
@@ -56,6 +71,7 @@ weaponHeatSkillClan=0.084
 weaponHeatSkillIS=0.105
 speedSkill=.075
 
+#constants
 idhsCap=2
 edhsCap=.5f
 dhsDis=.22f
