--- a/config.properties
+++ b/config.properties
@@ -32,7 +32,7 @@ targetEngageDuration=1.5
 #number of loadouts to generate for each configuration of chassis,variant,engine type,armor type
 numLoadouts=1
 
-#dps skill preset, remove pound signs to use
+#dps skill preset, remove pound signs to enable
 #capacitySkill=.09
 #dissipationSkill=.1
 #jamDurationSkill=0
@@ -45,7 +45,7 @@ numLoadouts=1
 #weaponHeatSkillIS=0.105
 #speedSkill=.075
 
-#burst preset, remove pound signs to use
+#burst preset, remove pound signs to enable
 #capacitySkill=.12
 #dissipationSkill=.1
 #jamDurationSkill=0
@@ -58,7 +58,7 @@ numLoadouts=1
 #weaponHeatSkillIS=0.105
 #speedSkill=.075
 
-#default preset, remove pound signs to use
+#default preset, add pound signs to disable
 capacitySkill=.15
 dissipationSkill=.1
 jamDurationSkill=.15
